# FullStack-TodoList

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  DevChanges.md  LICENSE  MERGE_Y_RAMAS.md  Makefile  README.en.md  README.md  conftest.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
backend/: .env  .env.example  Procfile  build.sh  conftest.py  manage.py  requirements.txt
backend/apps/accounts/: serializers.py  views.py
backend/apps/assistant/: ai_service.py  serializers.py  views.py
backend/apps/core/: apps.py  logging.py
backend/apps/groups/: views.py
backend/apps/tasks/: models.py  serializers.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_taskgroup.py
backend/apps/tasks/tests/: test_models.py  test_serializers.py  test_views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/scripts/: build_backend.ps1  build_backend.sh  ensure_migrations.py
backend/tasks/: ai_service.py  models.py  serializers.py  tests.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_rename_customuser_task.py
backend/todolistapi/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.js  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html  lcov.info
frontend/coverage/components/: Spinner.jsx.html  TaskCard.jsx.html  index.html
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/components/: Spinner.jsx.html  TaskCard.jsx.html  index.html
frontend/coverage/lcov-report/utils/: index.html  schema.jsx.html
frontend/coverage/utils/: index.html  schema.jsx.html
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/components/: AIAssistantFAB.jsx  AIAssistantModal.jsx  LoginInputs.jsx  Spinner.jsx  TaskCard.jsx  TaskGroupTabs.jsx
frontend/src/components/__tests__/: Spinner.test.jsx  TaskCard.test.jsx
frontend/src/layouts/: LoginLayout.jsx  NavbarLayout.jsx  ProfileLayout.jsx  RegisterLayout.jsx  Sidebar.jsx  SidebarLayout.jsx  TaskLayout.jsx
frontend/src/pages/: AddTaskPage.jsx  AuthPage.jsx  EditTaskPage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  Tasks.jsx  VerifyEmailPage.jsx
frontend/src/store/: store.js  useStore.js
frontend/src/utils/: schema.jsx
frontend/src/utils/__tests__/: schema.test.js
scripts/: clean.py  setup_env.ps1  setup_env.sh
