[project]
name = "fullstack-todolist"
version = "1.0.0"
description = "API para gestionar tareas y usuarios"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["backend"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "**/migrations/**",
    "staticfiles",
    "node_modules",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tasks", "todolistapi"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = [
    "migrations/",
    "frontend/",
]
